syntax = "proto3";

package com.road.yishi.proto.battle;

message AttackModeMsg {
  int32 userId = 1;
  string battleId = 2;
  string serverName = 3;
  int32 armyId = 4;
  int32 mode = 5;
  int32 fmTurn = 6;
  int32 heroSp = 7;
}
