syntax = "proto3";

package com.road.yishi.proto.campaign;

message BatterLastInfoMsg {
  int32 count = 1;
}
