syntax = "proto3";

package com.road.yishi.proto.player;

message LoginStateMsg {
  int32 playerId = 1;
  int32 state = 2;
}
