syntax = "proto3";

package com.road.yishi.proto.player;

message PlayerRenameReqMsg {
  string nickName = 1;
  int32 type = 2;
  int32 pos = 3;
}
