syntax = "proto3";

package com.road.yishi.proto.rebate;

message RebateOpMsg {
  string id = 1;
  string packageid = 2;
  int32 op = 3;
}
