syntax = "proto3";

package com.road.yishi.proto.store;

message StoreReqMsg {
  int32 holePos = 1;
  bool operate = 2;
  int32 bagType = 3;
  int32 bagPos = 4;
  int32 mountPos = 5;
  int32 composeId = 6;
  int32 composeNum = 7;
  bool autoBuy = 8;
  int32 srcItemid = 9;
  int32 desItemid = 10;
  int32 count = 11;
  int32 payType = 12;
}
